<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Diary</string>
    <string name="action_settings">Settings</string>
    <string name="courses_taught">Courses Taught</string>
    <string name="events">Events</string>
    <string name="news">News</string>
    <string name="contact">Contact</string>
	<string name="contact_name">Name</string>
	<string name="contact_position">Position</string>
	<string name="contact_email">Email</string>
	<string name="contact_phone">Phone</string>
	<string name="contact_office">Office</string>
	<string name="contact_office_hours">Office Hrs</string>
	<string name="contact_course">Course</string>
	<string name="contact_course_no">Course No</string>
	<string name="contact_done">Done</string>
	<string name="edit">Edit</string>
	<string name="done">Done</string>
	<string name="event_title">Event</string>
	<string name="event_type">Event Type</string>
	<string name="event_day_title">Days</string>
	<string name="event_day">Monday</string>
	<string name="event_time_title">Time</string>
	<string name="event_time">1:30 PM - 2:45 PM</string>
	<string name="event_day_time_title">Date and Time</string>
	<string name="event_day_time">Monday 23</string>
	<string name="event_note_title">Note</string>
	<string name="event_note">This is a note. Machine Learning in Vision and Brain Analytics Machine Learning in Vision and Brain Analytics</string>
	<string name="news_headline">Machine Learning in Vision and Brain Analytics Machine Learning in Vision and Brain Analytics</string>
	<string name="news_hyperlink">http://stackoverflow.com/questions/18222433/how-to-make-links-in-textview-clickable-in-android</string>
	<string name="news_keywords">Machine Learning</string>
	<string name="news_highlights">Tim Oates</string>
	<string name="course_code">341</string>
	<string name="course_name">Mobile Computing</string>
	<string name="course_credits">3.00</string>
	<string name="course_days">Thursdays</string>
	<string name="course_time">1:30 PM - 2:45 PM</string>

</resources>
