<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TableLayout
        android:id="@+id/TableLayoutNews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".EditNewsActivity" >

        <TableRow
            android:id="@+id/tableRowNews1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/editTextNewsHeadline"
                android:inputType="text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/news_headline"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000"
                android:textStyle="bold" />
        </TableRow>

		<TableRow
            android:id="@+id/tableRowNews2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <EditText
                android:inputType="text"
                android:id="@+id/editTextNewsHighlights"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/news_highlights"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000"
                android:textStyle="bold" />
        </TableRow>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="2dip"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#00B4D6" />

        <TableRow
            android:id="@+id/tableRowNews3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <EditText
                android:inputType="text"
                android:id="@+id/editTextNewsHyperlink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/news_hyperlink"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:autoLink="web"
                android:textColor="#000000"
                android:textStyle="normal"
                android:singleLine="false"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRowNews4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <EditText
                android:inputType="text"
                android:id="@+id/editTextNewsKeywords"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/news_keywords"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>

</ScrollView>